# playing-with-sboms

./: Cargo.toml  README.md
src/: lib.rs  main.rs  run.rs  walker.rs
src/tasks/: main_cpe.rs  main_cpe_db.rs  mod.rs  unique_main.rs  unique_names.rs
src/utils/: cpe_dictionary.rs  mod.rs
src/utils/vex/: mod.rs  product.rs
