[package]
name = "playing-with-sboms"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bzip2 = "0.4"
env_logger = "0.10"
log = "0.4.19"
spdx-rs = "=0.5.2"
serde_json = "1"
humansize = "2"
rayon = "1"
indicatif = { version = "0.17.5", features = ["rayon"] }
indicatif-log-bridge = "0.2.1"
flate2 = "1"

serde = "1"
time = { version = "0.3", features = ["serde"] }

quick-xml = { version = "0.30", features = ["serialize"] }

#xmlserde = "0.5.0"
#xmlserde_derives = "0.5.0"

[patch.crates-io]
spdx-rs = { git = "https://github.com/lulf/spdx-rs", rev = "f3f1ea9a72e270c8434f8be6ca1d61608b25b813" }