[package]
name = "playing-with-sboms"
version = "0.1.0"
edition = "2021"

default-run = "playing-with-sboms"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bzip2 = "0.4"
cpe = { version = "0.1", features = ["permissive_encoding"] }
csaf = { version = "0.5.0", default-features = false }
csaf-walker = "0.1"
env_logger = "0.10"
flate2 = "1"
humansize = "2"
indicatif = { version = "0.17.5", features = ["rayon"] }
indicatif-log-bridge = "0.2.1"
log = "0.4.19"
rayon = "1"
serde_json = "1"
spdx-rs = "=0.5.2"
tokio = { version = "1", features = ["full"] }

serde = "1"
time = { version = "0.3", features = ["serde"] }

quick-xml = { version = "0.30", features = ["serialize"] }

#xmlserde = "0.5.0"
#xmlserde_derives = "0.5.0"


[patch.crates-io]
spdx-rs = { git = "https://github.com/lulf/spdx-rs", rev = "f3f1ea9a72e270c8434f8be6ca1d61608b25b813" }
csaf = { git = "https://github.com/voteblake/csaf-rs", rev = "76cb9ede10adb1fbb495b17e5fd8d95c5cf6c900" } # FIXME: waiting for release